tests/baselines/reference/parserModuleDeclaration6.errors.txt
parserModuleDeclaration6.ts(1,8): error TS2819: Namespace name cannot be 'number'.


==== parserModuleDeclaration6.ts (1 errors) ====
    module number {
           ~~~~~~
!!! error TS2819: Namespace name cannot be 'number'.
    }